--- a/website/package.json
+++ b/website/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.0.0",
     "ng-zorro-antd": "^16.2.2",
     "ngx-ace-wrapper": "^16.0.0",
+    "ngx-socket-io": "^4.5.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
